@@ -52,7 +52,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.CriteriaQuery;
@@ -299,7 +298,7 @@ public class KickstartFactory extends HibernateFactory {
         // Filter out the unsupported Commands for the passed in profile
         return names.stream()
                 .filter(cn -> !cn.getName().equals("lilocheck") && !cn.getName().equals("langsupport"))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
