@@ -29,7 +29,6 @@ import org.apache.commons.lang3.builder.ToStringBuilder;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -341,7 +340,7 @@ public class SetupWizardProductDto implements Selectable,
                 getOptionalChannels().stream()
                 )
                 .filter(Channel::isInstallerUpdates)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -385,10 +384,9 @@ public class SetupWizardProductDto implements Selectable,
      */
     @Override
     public boolean equals(Object other) {
-        if (!(other instanceof SetupWizardProductDto)) {
+        if (!(other instanceof SetupWizardProductDto otherProduct)) {
             return false;
         }
-        SetupWizardProductDto otherProduct = (SetupWizardProductDto) other;
         return new EqualsBuilder()
             .append(getIdent(), otherProduct.getIdent())
             .isEquals();
