@@ -38,7 +38,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Handler for AppStream operations on systems
@@ -189,7 +188,7 @@ public class SystemAppStreamHandler extends BaseHandler {
                             AppStreamsManager.listChannelAppStreams(channel.getId()),
                             server::hasAppStreamModuleEnabled
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         catch (LookupException e) {
             throw new NoSuchSystemException();
