@@ -156,7 +156,7 @@ public class SsmManager {
         List<Long> serverIds = ServerFactory.findServersInSetByChannel(user, baseChannelId);
         return serverIds.stream()
                 .map(ServerFactory::lookupById)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -181,7 +181,7 @@ public class SsmManager {
                 Stream.empty();
 
         List<ChannelSelectionResult> allResults = Stream.concat(withBaseChannelResults, noBaseChannelResults)
-                                                        .collect(Collectors.toList());
+                                                        .toList();
 
         //success channel selections
         Stream<ChannelSelectionResult> succeededResults = allResults.stream().filter(e -> !e.isError());
@@ -215,7 +215,7 @@ public class SsmManager {
                 )
         ).flatMap(Function.identity());
 
-        return Stream.concat(succededResults, erroredResults).collect(Collectors.toList());
+        return Stream.concat(succededResults, erroredResults).toList();
     }
 
     private static Stream<ChannelSelectionResult> handleChannelChangesForSystemsWithNoBaseChannel(
@@ -512,7 +512,7 @@ public class SsmManager {
                     ac.getServers()
                             .addAll(oldBaseServers.stream()
                                     .map(SsmServerDto::from)
-                                    .collect(Collectors.toList()));
+                                    .toList());
 
                     fillChildChannels(user, ac, newBase.getId());
                     result.add(ac);
@@ -527,7 +527,7 @@ public class SsmManager {
                     ac.getServers()
                             .addAll(oldBaseServers.stream()
                                     .map(SsmServerDto::from)
-                                    .collect(Collectors.toList()));
+                                    .toList());
 
                     fillChildChannels(user, ac, change.getOldBaseId());
                     result.add(ac);
