@@ -40,7 +40,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 
 public class HubReportDbUpdateWorker implements QueueWorker {
@@ -102,7 +101,7 @@ public class HubReportDbUpdateWorker implements QueueWorker {
             return false;
         });
 
-        return tableEntry.stream().map(t -> String.valueOf(t.getValue())).collect(Collectors.toList());
+        return tableEntry.stream().map(t -> String.valueOf(t.getValue())).toList();
     }
 
     private void updateRemoteData(Session remoteSession, Session localSession, String tableName, long mgmId) {
