@@ -48,7 +48,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import spark.ModelAndView;
 import spark.Request;
@@ -159,7 +158,7 @@ public class NotificationMessageController {
         List<UserNotification> notifications = messageIds.stream()
                 .map(id -> UserNotificationFactory.lookupByUserAndMessageId(id, user))
                 .flatMap(Optional::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         UserNotificationFactory.delete(notifications);
 
@@ -296,6 +295,6 @@ public class NotificationMessageController {
     public List<NotificationMessageJson> getJSONNotificationMessages(List<UserNotification> list, User user) {
         return list.stream()
                 .map(un -> new NotificationMessageJson(un.getMessage(), un.getRead()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
