@@ -19,7 +19,6 @@ import com.redhat.rhn.domain.server.Server;
 import com.google.gson.annotations.SerializedName;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * SCCVirtualizationHostJson
@@ -63,7 +62,7 @@ public class SCCVirtualizationHostJson {
         systems = s.getGuests().stream()
                 .filter(guest -> guest.isRegisteredGuest())
                 .map(guest -> new SCCVirtualizationHostSystemsJson(guest))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
