@@ -37,7 +37,6 @@ import java.security.SecureRandom;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -88,7 +87,7 @@ public class SCCSystemRegistrationSystemDataAcquisitor implements SCCSystemRegis
                     })
                     .filter(Objects::nonNull)
                     .map(SCCMinProductJson::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             SCCHwInfoJson hwInfo = new SCCHwInfoJson();
 
